--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,1 @@
-<div class="container">
-
-  <div class="upload-area">
-    <div class="upload-block">
-      <label class="upload-label">
-        <span>Select Source Image</span>
-        <input type="file" accept="image/*" (change)="onSourceImageSelected($event)" hidden />
-      </label>
-      <div *ngIf="sourceImagePreview" class="preview">
-        <img [src]="sourceImagePreview" alt="Source Image Preview" />
-      </div>
-    </div>
-
-    <div class="upload-block">
-      <label class="upload-label">
-        <span>Select Target Video</span>
-        <input type="file" accept="video/*" (change)="onTargetVideoSelected($event)" hidden />
-      </label>
-      <div *ngIf="targetVideoPreview" class="preview">
-        <video controls [src]="targetVideoPreview"></video>
-      </div>
-    </div>
-  </div>
-
-  <div class="button-section">
-    <button (click)="submit()" [disabled]="loading">
-      {{ loading ? 'Processing...' : 'Swap Face' }}
-    </button>
-  </div>
-
-  <div *ngIf="loading" class="progress-section">
-    <div *ngIf="uploadProgress < 100" class="progress-text">Uploading... {{ uploadProgress }}%</div>
-    <mat-progress-spinner mode="indeterminate" diameter="60" color="primary">
-    </mat-progress-spinner>
-  </div>
-
-  <div *ngIf="outputVideoUrl" class="result-section">
-    <h2 class="subtitle">Result</h2>
-    <video class="output-video" controls [src]="outputVideoUrl"></video>
-  </div>
-</div>
+<router-outlet></router-outlet>
