--- a/src/app/components/swap/swap.component.html
+++ b/src/app/components/swap/swap.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-
+<div style="width: 100%; background-color: #1f2937; height: 60px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center;">
+  <div>
+    <span style="font-size: 2.5em; color: white; font-weight: bold;">Face fusion</span>
+  </div>
+  <div>
+    <span style="color: white; margin-right: 2em;">60 credits</span>
+    <span style="color: white; cursor: pointer; margin-right: 2em;">Log out</span>
+  </div>
+</div>
     <div class="upload-area">
       <div class="upload-block">
         <label class="upload-label">
