--- a/src/app/components/swap/swap.component.html
+++ b/src/app/components/swap/swap.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-<div style="width: 100%; background-color: #1f2937; height: 60px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center;">
+<div style="width: 100%; background-color: #1f1e24; height: 60px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center;">
   <div>
-    <span style="font-size: 2.5em; color: white; font-weight: bold;">Face fusion</span>
+    <span style="font-size: 2.5em; color: white; font-weight: bold; margin-left: 0.5em;">Face fusion</span>
   </div>
-  <div>
-    <span style="color: white; margin-right: 2em;">{{credit}} credits</span>
-    <span style="color: white; cursor: pointer; margin-right: 2em;">Log out</span>
+  <div style="display: flex; align-items: center;">
+    <span style="color: white; margin-right: 2em; font-size: 1.2em;">{{credit}} credits</span>
+    <span style="color: white; cursor: pointer; margin-right: 2em; font-size: 1.2em;">Log out</span>
   </div>
 </div>
     <div class="upload-area">
