--- a/src/app/components/swap/swap.component.scss
+++ b/src/app/components/swap/swap.component.scss
@@ -21,8 +21,14 @@
     background-color: #1a1a1a;
     padding: 20px;
     border-radius: 12px;
-    width: 300px;
+    border: 2px dotted white;
+    width: 20em;
+    height: 20em;
     box-shadow: 0 0 10px rgba(255,255,255,0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   
   .upload-label {
