--- a/src/app/components/swap/swap.component.scss
+++ b/src/app/components/swap/swap.component.scss
@@ -1,7 +1,11 @@
 
   
 .container {
-    background-color: #1f1e24;
+  background-image: url("https://static.vecteezy.com/system/resources/previews/003/083/657/non_2x/dark-abstract-background-black-circles-vector.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;        /* Cover the screen */
+  background-position: center;
+  background-color: #0f0f0f; 
    // width: 100vw;
     min-height: 100vh;
     
