--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,10 @@
 .login-container {
-    background-color: #1f1e24;
+   // background-color: #1f1e24;
+   background-image: url("https://static.vecteezy.com/system/resources/previews/003/083/657/non_2x/dark-abstract-background-black-circles-vector.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;        /* Cover the screen */
+   background-position: center;
+   background-color: #0f0f0f; 
     min-height: 100vh;
     width: 100vw;
     display: flex;
