--- a/src/app/components/swap/swap.component.html
+++ b/src/app/components/swap/swap.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div
-    style="width: 100%; background-color: #1f1e24; height: 60px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center;">
+    style="width: 100%; background-color: transparent; height: 60px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center;">
     <div>
       <span style="font-size: 2.5em; color: white; font-weight: bold; margin-left: 0.5em;">FaceSwapper</span>
     </div>
